CODE/logs/.ipynb_checkpoints/LOG_SPOTIFY_0_SPOT1_HRV1_JOB-checkpoint
start


Note: the module "conda" cannot be unloaded because it was not loaded.

load conda/22.11.1  : OK 
envs_dirs : /work/scratch/env/barrouz/conda_env/
pkgs_dirs : /work/scratch/env/barrouz/pkgs_conda
start spotify.py
  File "/home/ad/barrouz/code/app/spotify.py", line 148
    for , row in df.iterrows():
        ^
SyntaxError: invalid syntax
[2024-10-02 22:15:52.333579023+00:00] cnes_level2/barrouz/22341854:  Account (env) = cnes_level2
[2024-10-02 22:15:52.334559274+00:00] cnes_level2/barrouz/22341854:     User (env) = barrouz
[2024-10-02 22:15:52.335462235+00:00] cnes_level2/barrouz/22341854:        GroupId = cesbio(426000053)
[2024-10-02 22:15:52.336339716+00:00] cnes_level2/barrouz/22341854:         UserId = barrouz(9134)
[2024-10-02 22:15:52.337236247+00:00] cnes_level2/barrouz/22341854:        Account = cnes_level2
[2024-10-02 22:15:52.338069939+00:00] cnes_level2/barrouz/22341854:        Account = cnes_level2
[2024-10-02 22:15:52.338923880+00:00] cnes_level2/barrouz/22341854:      Partition = cpu2022
[2024-10-02 22:15:52.339747452+00:00] cnes_level2/barrouz/22341854:            QOS = cpu_2022_64
[2024-10-02 22:15:52.340547604+00:00] cnes_level2/barrouz/22341854:        JobName = S0_SPOT1_HRV1
[2024-10-02 22:15:52.341337656+00:00] cnes_level2/barrouz/22341854:     SubmitTime = 2024-10-02T22:15:20
[2024-10-02 22:15:52.342139068+00:00] cnes_level2/barrouz/22341854:        RunTime = 00:00:00
[2024-10-02 22:15:52.342932000+00:00] cnes_level2/barrouz/22341854:      TimeLimit = 01:00:00
[2024-10-02 22:15:52.343781782+00:00] cnes_level2/barrouz/22341854:   EligibleTime = 2024-10-02T22:15:20
[2024-10-02 22:15:52.344636324+00:00] cnes_level2/barrouz/22341854:      StartTime = 2024-10-02T22:15:47
[2024-10-02 22:15:52.345438696+00:00] cnes_level2/barrouz/22341854:        EndTime = 2024-10-02T23:15:47
[2024-10-02 22:15:52.346242938+00:00] cnes_level2/barrouz/22341854:       ExitCode = 0:0
[2024-10-02 22:15:52.347057470+00:00] cnes_level2/barrouz/22341854:       NodeList = trex030
[2024-10-02 22:15:52.347884791+00:00] cnes_level2/barrouz/22341854:      BatchHost = trex030
[2024-10-02 22:15:52.348711943+00:00] cnes_level2/barrouz/22341854:           TRES = 
[2024-10-02 22:15:52.349515865+00:00] cnes_level2/barrouz/22341854:        Command = /home/ad/barrouz/code/trex/spotify_job.sh
[2024-10-02 22:15:52.350311387+00:00] cnes_level2/barrouz/22341854:        WorkDir = /home/ad/barrouz/code
[2024-10-02 22:15:52.351139659+00:00] cnes_level2/barrouz/22341854:         StdErr = /home/ad/barrouz/code/logs/LOG_SPOTIFY_0_SPOT1_HRV1_JOB
[2024-10-02 22:15:52.351988600+00:00] cnes_level2/barrouz/22341854:         StdOut = /home/ad/barrouz/code/logs/LOG_SPOTIFY_0_SPOT1_HRV1_JOB

#########################################
#        EVIDEN - CNES                  #
#        Job Accounting                 #
#########################################
Cluster              : trex
JobIDRaw             : 22341854
JobID                : 22341854
JobName              : S0_SPOT1_HRV1
Account              : cnes_level2
User                 : barrouz(9134), cesbio(426000053)
Partition            : cpu2022
QOS                  : cpu_2022_64
Nodelist             : trex030 (1)
State                : FAILED  (Exitcode=1:0, DerivedExitCode=0:0, Restarts=0)
Submit date          : 2024-10-02T22:15:20
Start time           : 2024-10-02T22:15:47
End time             : 2024-10-02T22:15:51
Elapsed time         : 00:00:04  (Timelimit=01:00:00, Suspended=00:00:00)
TEI                  : 0:00:16
Command              : /home/ad/barrouz/code/trex/spotify_job.sh
StdOut               : /home/ad/barrouz/code/logs/LOG_SPOTIFY_0_SPOT1_HRV1_JOB
StdErr               : /home/ad/barrouz/code/logs/LOG_SPOTIFY_0_SPOT1_HRV1_JOB

STEP(s) : 2
--------- 
   StepID  | JobName      State       Exit   Start               End                 Elapsed   TotalCPU   CPUTime    ConsumedEnergy MaxDiskRead MaxDiskWrite     MaxRSS MaxRSSTask MaxRSSNode NNodes UserCPU    NodeList
   ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- 
   batch   | batch        FAILED      1:0    2024-10-02T22:15:47 2024-10-02T22:15:51 00:00:04  00:01.356  00:00:16              0.0           0        0.00M      1976K          0    trex030      1 00:01.059  trex030
   extern  | extern       COMPLETED   0:0    2024-10-02T22:15:47 2024-10-02T22:15:51 00:00:04  00:00.001  00:00:16              1.5           0            0      1708K          0    trex030      1 00:00:00   trex030

